fixed overlapping backgrounds in nav bar drop down options

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,12 +42,15 @@ body {
     font-family: 'Permanent Marker', cursive;
     font-size: 1em;
 }
+.nav_bar ul li a {
+  background: none;
+}
 
 .nav_bar_space {
   height: 50px;
 }
 .nav_bar1 {
-    width: 80%;
+    width: 82%;
     float: left;
 }
 .nav_bar2.user_link {
@@ -135,7 +138,7 @@ body>.nav_bar>.nav_bar1>ul>li:hover .nav_bar {
   visibility: visible;
 }
 .nav_bar1>ul  {
-    margin-left: 25%;
+    margin-left: 21%;
 }
 
 
